src/include/cephfs/libcephfs.h

struct ceph_mount_info;
struct ceph_dir_result;
const char *ceph_version(int *major, int *minor, int *patch);
int ceph_create(struct ceph_mount_info **cmount, const char * const id);
typedef void *rados_t;
int ceph_create_from_rados(struct ceph_mount_info **cmount, rados_t cluster);
int ceph_init(struct ceph_mount_info *cmount);
int ceph_mount(struct ceph_mount_info *cmount, const char *root);
int ceph_mds_command(struct ceph_mount_info *cmount,
    const char *mds_spec,
    const char **cmd,
    size_t cmdlen,
    const char *inbuf, size_t inbuflen,
    char **outbuf, size_t *outbuflen,
    char **outs, size_t *outslen);
void ceph_buffer_free(char *buf);
void ceph_shutdown(struct ceph_mount_info *cmount);
int ceph_conf_read_file(struct ceph_mount_info *cmount, const char *path_list);
int ceph_conf_parse_argv(struct ceph_mount_info *cmount, int argc, const char **argv);
int ceph_conf_set(struct ceph_mount_info *cmount, const char *option, const char *value);
int ceph_conf_get(struct ceph_mount_info *cmount, const char *option, char *buf, size_t len);
int ceph_statfs(struct ceph_mount_info *cmount, const char *path, struct statvfs *stbuf);
int ceph_sync_fs(struct ceph_mount_info *cmount);
const char* ceph_getcwd(struct ceph_mount_info *cmount);
int ceph_chdir(struct ceph_mount_info *cmount, const char *path);
int ceph_opendir(struct ceph_mount_info *cmount, const char *name, struct ceph_dir_result **dirpp);
int ceph_closedir(struct ceph_mount_info *cmount, struct ceph_dir_result *dirp);
struct dirent * ceph_readdir(struct ceph_mount_info *cmount, struct ceph_dir_result *dirp);
int ceph_mkdir(struct ceph_mount_info *cmount, const char *path, mode_t mode);
int ceph_mkdirs(struct ceph_mount_info *cmount, const char *path, mode_t mode);
int ceph_rmdir(struct ceph_mount_info *cmount, const char *path);
int ceph_symlink(struct ceph_mount_info *cmount, const char *existing, const char *newname);
int ceph_unlink(struct ceph_mount_info *cmount, const char *path);
int ceph_rename(struct ceph_mount_info *cmount, const char *from, const char *to);
int ceph_stat(struct ceph_mount_info *cmount, const char *path, struct stat *stbuf)
  LIBCEPHFS_DEPRECATED;
int ceph_fstat(struct ceph_mount_info *cmount, int fd, struct stat *stbuf)
  LIBCEPHFS_DEPRECATED;
int ceph_flock(struct ceph_mount_info *cmount, int fd, int operation,
	       uint64_t owner);
int ceph_open(struct ceph_mount_info *cmount, const char *path, int flags, mode_t mode);
int ceph_close(struct ceph_mount_info *cmount, int fd);
int ceph_read(struct ceph_mount_info *cmount, int fd, char *buf, int64_t size, int64_t offset);
int ceph_write(struct ceph_mount_info *cmount, int fd, const char *buf, int64_t size,
	       int64_t offset);
int ceph_fsync(struct ceph_mount_info *cmount, int fd, int syncdataonly);
int ceph_getxattr(struct ceph_mount_info *cmount, const char *path, const char *name, 
	void *value, size_t size);
int ceph_setxattr(struct ceph_mount_info *cmount, const char *path, const char *name, 
	const void *value, size_t size, int flags);